fix: double scroll bar bug

--- a/src/styles/portfolio-page.scss
+++ b/src/styles/portfolio-page.scss
@@ -23,7 +23,7 @@
 }
 
 .portfolio-list {
-  height: 100vh;
+  min-height: 100vh;
   padding: 0 15% 0 15%;
 
   // @media screen and (max-width: 400px) {
